# nexo

./: LICENSE  README.md
app/web/: Cargo.toml  LICENSE_MIT  index.html
app/web/src/: lib.rs
nexo/: Cargo.toml
nexo-test/: Cargo.toml  LICENSE_MIT
nexo-test/src/: lib.rs  main.rs  styles.css  t.html
nexo-test/src/components/: app.rs  mod.rs  nav.rs  panel.rs
nexo/src/: background.rs  component.rs  geometry.rs  justify.rs  layout.rs  length.rs  lib.rs  listeners.rs  node.rs  property.rs  style.rs
nexo/src/core/: app.rs  event.rs  mod.rs  node.rs
nexo/src/core/layout/: align.rs  layout.rs  mod.rs
nexo/src/core/render/web/: class_names.rs  closures.rs  display.rs  events.rs  mod.rs  render.rs
nexo/src/core/style/: background.rs  border.rs  color.rs  margin.rs  mod.rs  padding.rs  property.rs  style.rs
nexo/src/core/tree/: index.rs  mod.rs  node_ref.rs  tree.rs
nexo/src/render/: mod.rs
nexo/src/render/web/: display.rs  mod.rs  render.rs
nexo/src/render/web-old/: display.rs  render.rs
nexo/src/render/web-old/css/: class_names.rs  css.rs  mod.rs
nexo/src/spacing/: margin.rs  mod.rs  padding.rs  spacing.rs
nexo/src/tree/: event.rs  index.rs  mod.rs  node_ref.rs  tree.rs
nexo/src/tree2/: index.rs  mod.rs  tree.rs  tree_id.rs
prub/: Cargo.toml
prub/src/: main.rs
