[package]
name = "nexo"
version = "0.1.0"
authors = ["Juan Cabrera <juan@jjcp.dev>"]
edition = "2018"
license = "MIT"
description = "Cross platform UI library"
readme = "../README.md"
respository = "https://github.com/jjcp-dev/nexo"
homepage = "https://github.com/jjcp-dev/nexo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
