[package]
name = "nexo"
version = "0.1.0"
authors = ["Juan Cabrera <juan@jjcp.dev>"]
edition = "2018"
license = "MIT"
description = "Cross platform UI library"
readme = "../README.md"
respository = "https://github.com/jjcp-dev/nexo"
homepage = "https://github.com/jjcp-dev/nexo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.web-sys]
version = "0.3.44"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"
url = "2.1.1"
